--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -114,6 +114,11 @@
             bottom: 0;
             width: 100%;
         }
+        #accesslinks li {
+            display: inline-block; /* Display list items in a line */
+            margin: 10px; /* Add some spacing between list items */
+            margin-right: auto;
+            }
     </style>
     
 </head>
@@ -121,7 +126,19 @@
     <header>
         <h1>Usama Software House</h1>
     </header>
-    
+    <div id="accesslinks">
+        <ul>
+            {% if user.is_authenticated %}
+                <p>Welcome, {{ user.username }}!</p>
+                <!-- Add a link to log out if needed -->
+                <a href="/logout/" class="logout-link">Logout</a>
+            {% endif %}
+            {% if not user.is_authenticated %}
+            <li><a href="/login/" class="logout-link">Login</a></li>
+            <li><a href="{% url 'register' %}">Register</a></li>
+            {% endif %}
+        </ul>
+      </div>
     <nav>
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'post' %}">Post</a>
