feet:changes implement

--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,56 @@
             padding: 0;
             box-sizing: border-box;
             background-color: #f5f5f5;
+        }
+        .inline-form {
+            display: inline-block;
+            margin-right: 10px;
+        }
+        .messages {
+            list-style: none;
+            padding: 10px;
+            margin: 0;
+        }
+
+        .messages li {
+            margin-bottom: 5px;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        .success {
+            background-color: #d4edda;
+            border-color: #c3e6cb;
+            color: #155724;
+        }
+
+        .error {
+            background-color: #f8d7da;
+            border-color: #f5c6cb;
+            color: #721c24;
+        }
+
+        .info {
+            background-color: #d1ecf1;
+            border-color: #bee5eb;
+            color: #0c5460;
+        }
+
+        .warning {
+            background-color: #fff3cd;
+            border-color: #ffeeba;
+            color: #856404;
+        }
+    .comment-section {
+        display: inline-block;
+    }
+        .colorful-message {
+            color: rgb(0, 0, 0);
+            background-color: rgb(206, 204, 215);
+            padding: 10px;
+            border: 1px solid black;
+            text-align: center;
         }
     
         header {
