feet:Update main page

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,13 +3,12 @@
 {% block page_title %} Home Page {% endblock %}
 
 {% block content %}
-
 <section id="home">
-    <h2>Welcome to Our Software House</h2>
+    <h1>Welcome to Our Software House</h1>
     <p>We deliver innovative solutions for your business needs.</p>
 </section>
 
-<section id="services">
+<section id="service">
     <h2>Our Services</h2>
     <ul>
         <li>Custom Software Development</li>
@@ -19,21 +18,21 @@
     </ul>
 </section>
 
-<section id="portfolio">
+<section id="portfolios">
     <h2>Portfolio</h2>
     <p>Check out some of our successful projects.</p>
     <!-- Add portfolio items here -->
 </section>
 
-<section id="about">
+<section id="abouts">
     <h2>About Us</h2>
     <p>We are a team of experienced professionals dedicated to delivering high-quality software solutions.</p>
 </section>
 
-<section id="contact">
+<section id="contacts">
     <h2>Contact Us</h2>
     <p>Reach out to us for inquiries and collaborations.</p>
     <!-- Add contact form or contact information here -->
-</section>
+</section><br><br><br>
 
 {% endblock %}
