--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -13,6 +13,9 @@
             box-sizing: border-box;
             background-color: #f5f5f5;
         }
+        h1 {
+        font-size: xxx-large;
+        }
         .inline-form {
             display: inline-block;
             margin-right: 10px;
@@ -53,9 +56,9 @@
             border-color: #ffeeba;
             color: #856404;
         }
-    .comment-section {
-        display: inline-block;
-    }
+        .comment-section {
+            display: inline-block;
+        }
         .colorful-message {
             color: rgb(0, 0, 0);
             background-color: rgb(206, 204, 215);
@@ -64,13 +67,18 @@
             text-align: center;
         }
     
-        header {
+        #header {
             background-color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             color: #fff;
             padding: 1em;
             text-align: center;
         }
-    
+        #header h1 {
+        margin: 0; /* Remove default margin for h1 */
+    }
         nav {
             background-color: #444;
             padding: 1em;
@@ -120,7 +128,7 @@
         button {
             background-color: #333;
             color: #fff;
-            padding: 10px 15px;
+            padding: 7px 8px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -142,7 +150,7 @@
         }
     
         p {
-            color: #555;
+            color: #c0acac;
         }
     
         ul {
@@ -161,36 +169,53 @@
             color: #fff;
             padding: 1em;
             text-align: center;
-            position: fixed;
             bottom: 0;
-            width: 100%;
         }
         #accesslinks li {
             display: inline-block; /* Display list items in a line */
             margin: 10px; /* Add some spacing between list items */
             margin-right: auto;
+            text-align: right;
             }
+        #accesslinks {
+            text-align: right;
+        }
+        .logout-link {
+            color: #ffffff;
+            margin-left: 10px; /* Add some margin between links if needed */
+        }
+        #logo {
+            max-width: 110px; /* Adjust the max-width of the logo as needed */
+        }
+        #home,#services,#portfolio,#about {
+            position: relative;
+            height: 200px;
+            text-align: center;
+            color: black; /* Set text color */
+            background: url('/media/background.jpg') center/cover no-repeat; /* Set the background image */
+            padding: 140px 100px; /* Adjust padding as needed */
+        }
     </style>
     
 </head>
 <body>
-    <header>
-        <h1>Usama Software House</h1>
-    </header>
-    <div id="accesslinks">
-        <ul>
-            {% if user.is_authenticated %}
-                <p>Welcome, {{ user.username }}!</p>
-                <!-- Add a link to log out if needed -->
-                <a href="/logout/" class="logout-link">Logout</a>
-            {% endif %}
-            {% if not user.is_authenticated %}
-            <li><a href="/login/" class="logout-link">Login</a></li>
-            <li><a href="{% url 'register' %}">Register</a></li>
-            {% endif %}
-        </ul>
+    <div id="header">
+        <img src="/media/logo.png" alt="Logo" id="logo">
+        <h1>UniHex Solution</h1>
+
+        {% if user.is_authenticated %}
+        <li><p>Welcome, {{ user.username }}!</p>
+            <!-- Add a link to log out if needed -->
+            <a href="/logout/" class="logout-link">Logout</a></li>
+        {% endif %}
+        {% if not user.is_authenticated %}
+    <li><a href="/login/" class="logout-link">Login</a> 
+        <a href="{% url 'register' %}" class="logout-link">Register</a></li>
+        {% endif %}
+
       </div>
-    <nav>
+
+    <nav style="font-size: large;">
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'post' %}">Post</a>
         <a href="{% url 'services' %}">Services</a>
@@ -200,7 +225,7 @@
     </nav>
     {% block content %} {% endblock %}
     <footer>
-        <p>&copy; 2023 Software House. All rights reserved.</p>
+        <p style="color: #ffffff;">&copy; 2023 UniHex All rights reserved.</p>
     </footer>
 </body>
 </html>
